[gd_scene load_steps=8 format=2]

[ext_resource path="res://inputs.tscn" type="PackedScene" id=1]
[ext_resource path="res://game.gd" type="Script" id=2]
[ext_resource path="res://assets/05_background_01.png" type="Texture" id=3]
[ext_resource path="res://assets/05_background_02.png" type="Texture" id=4]
[ext_resource path="res://assets/01_sumo_07.png" type="Texture" id=5]
[ext_resource path="res://graphics.gd" type="Script" id=6]
[ext_resource path="res://assets/05_background_05.png" type="Texture" id=7]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Input" parent="." instance=ExtResource( 1 )]

[node name="graphics" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Polygon2D" type="Polygon2D" parent="graphics"]
position = Vector2( 0, 13.7838 )
scale = Vector2( 1, 1.45946 )
color = Color( 0.172549, 0.105882, 0.180392, 1 )
polygon = PoolVector2Array( -53, 858, 1447, 829, 1436, -30, -64, -27 )

[node name="TextureRect" type="TextureRect" parent="graphics"]
margin_top = -300.0
margin_right = 1283.0
margin_bottom = 508.0
size_flags_stretch_ratio = 0.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="graphics"]
margin_left = 112.0
margin_top = 335.0
margin_right = 1186.0
margin_bottom = 774.0
texture = ExtResource( 4 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="graphics"]
margin_left = -28.0
margin_top = 192.0
margin_right = 228.0
margin_bottom = 448.0
texture = ExtResource( 7 )
expand = true

[node name="TextureRect4" type="TextureRect" parent="graphics"]
margin_left = 1072.0
margin_top = 262.0
margin_right = 1328.0
margin_bottom = 518.0
texture = ExtResource( 7 )
expand = true

[node name="players" type="Node2D" parent="graphics"]
position = Vector2( 570, 410 )

[node name="player1" type="Sprite" parent="graphics/players"]
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 5 )
hframes = 3

[node name="player2" type="Sprite" parent="graphics/players"]
position = Vector2( 150, 0 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 5 )
flip_h = true
hframes = 3

[connection signal="players_pos_changed" from="." to="graphics" method="_on_Game_players_pos_changed"]
[connection signal="player1_pressed" from="Input" to="." method="_on_Input_player1_pressed"]
[connection signal="player2_pressed" from="Input" to="." method="_on_Input_player2_pressed"]
